[gd_scene load_steps=2 format=3 uid="uid://rae53clbu6wr"]

[ext_resource type="Script" uid="uid://dlhrnj47gqdfr" path="res://scripts/Settings.gd" id="1"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Card" type="PanelContainer" parent="Center"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Center/Card"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Center/VBox"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="Tabs" type="TabContainer" parent="Center/VBox"]
custom_minimum_size = Vector2(420, 360)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0

[node name="Visual" type="VBoxContainer" parent="Center/VBox/Tabs"]
layout_mode = 2
theme_override_constants/separation = 10
metadata/_tab_index = 0

[node name="WindowModeLabel" type="Label" parent="Center/VBox/Tabs/Visual"]
layout_mode = 2
text = "Window Mode"
horizontal_alignment = 1

[node name="WindowMode" type="OptionButton" parent="Center/VBox/Tabs/Visual"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="Center/VBox/Tabs/Visual"]
layout_mode = 2
text = "Resolution"
horizontal_alignment = 1

[node name="Resolution" type="OptionButton" parent="Center/VBox/Tabs/Visual"]
layout_mode = 2

[node name="VfxToggle" type="CheckBox" parent="Center/VBox/Tabs/Visual"]
layout_mode = 2
text = "Enable particles"

[node name="VfxIntensityLabel" type="Label" parent="Center/VBox/Tabs/Visual"]
layout_mode = 2
text = "FX Density"
horizontal_alignment = 1

[node name="VfxIntensity" type="HSlider" parent="Center/VBox/Tabs/Visual"]
layout_mode = 2
step = 5.0
value = 100.0

[node name="Audio" type="VBoxContainer" parent="Center/VBox/Tabs"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
metadata/_tab_index = 1

[node name="MasterLabel" type="Label" parent="Center/VBox/Tabs/Audio"]
layout_mode = 2
text = "Master"
horizontal_alignment = 1

[node name="MasterSlider" type="HSlider" parent="Center/VBox/Tabs/Audio"]
layout_mode = 2
value = 100.0

[node name="MusicLabel" type="Label" parent="Center/VBox/Tabs/Audio"]
layout_mode = 2
text = "Music"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="Center/VBox/Tabs/Audio"]
layout_mode = 2
value = 100.0

[node name="SfxLabel" type="Label" parent="Center/VBox/Tabs/Audio"]
layout_mode = 2
text = "SFX"
horizontal_alignment = 1

[node name="SfxSlider" type="HSlider" parent="Center/VBox/Tabs/Audio"]
layout_mode = 2
value = 100.0

[node name="Gameplay" type="VBoxContainer" parent="Center/VBox/Tabs"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
metadata/_tab_index = 2

[node name="BallSpeedLabel" type="Label" parent="Center/VBox/Tabs/Gameplay"]
layout_mode = 2
text = "Ball Speed"
horizontal_alignment = 1

[node name="BallSpeedSlider" type="HSlider" parent="Center/VBox/Tabs/Gameplay"]
layout_mode = 2
min_value = 50.0
max_value = 150.0
step = 5.0
value = 100.0

[node name="PaddleSpeedLabel" type="Label" parent="Center/VBox/Tabs/Gameplay"]
layout_mode = 2
text = "Paddle Speed"
horizontal_alignment = 1

[node name="PaddleSpeedSlider" type="HSlider" parent="Center/VBox/Tabs/Gameplay"]
layout_mode = 2
min_value = 50.0
max_value = 150.0
step = 5.0
value = 100.0

[node name="BackButton" type="Button" parent="Center/VBox"]
layout_mode = 2
text = "Back"
